package edu.hitsz.prop;

/**
 * 火力道具
 *
 * @author 200111130周忠全
 */

public class BulletProp extends BaseProp{
    public BulletProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
